beginner/ingress-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  rules:
#  - host: test.apps.example.info
   - http: 
      paths:
        - path: #/hello-app
          backend:
            serviceName: hello-service
            servicePort: 80
